plugins {
    id 'java'
    id 'jacoco'
}

version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.vavr:vavr:0.10.4'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
}

jacoco {
    toolVersion = "0.8.11"
}

tasks.withType(Test).configureEach {
    jvmArgs '-XX:+EnableDynamicAgentLoading'
    jacoco {
        excludes = ['sun/**', 'jdk/**', 'java/**', 'com/sun/**']
    }
}

tasks.named("test") {
    useJUnitPlatform()
}

task unitTests(type: Test, group: "verification") {
    useJUnitPlatform {
        includeTags("unitTest")
    }
}
task integrationTests(type: Test, group: "verification") {
    useJUnitPlatform {
        includeTags("integrationTest")
    }
}

task e2eTests(type: Test, group: "verification") {
    useJUnitPlatform {
        includeTags("e2eTest")
    }
}
